--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Gupter:wght@400;500;700&family=Lancelot&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
-	background-color: #e4e1e5;
+	background-color: #2e2e2e;
 	font-family: "Merriweather", serif;
 	margin: auto;
-	color: #001123;
-	background-image: linear-gradient(#ddd,#fff);
+	color: white;
 }
 
 /* Nav */
 
 .navbar {
+	font-size: 1.5em;
 	width: 100%;
     box-shadow: 0 1px 5px #ccc;
 	font-weight: 900;
@@ -20,11 +20,11 @@ body {
 }
 
 .navbar-brand{
-	font-size: 2em;
+	font-size: 1.5em;
 }
 #navbarSupportedContent1{
 	font-family: "Gupter", serif;
-	font-size: 2em;
+	font-size: 1.2em;
 }
 
 .navbar-nav li{
@@ -80,11 +80,11 @@ main h1, main h2 {
 	font-weight: 900;
 	text-transform: uppercase;
 	letter-spacing: 0.15em;
-	font-size: 4em;
+	font-size: 5em;
 }
 
 .jumbotron p{
-	font-size: 2em;
+	font-size: 2.5em;
 }
 
 .jumbotron .btn{
@@ -100,9 +100,21 @@ main h1, main h2 {
 	letter-spacing: 0.12em;
 }
 
-#details, #transportation {
-	background-color: #2e2e2e;
+.fuckmobiles {
+	font-family: "Merriweather", sans-serif;
+	padding: 1em;
+	font-size: 2em;
+	text-align: center;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: 0.12em;
 	color: white;
+	display: none;
+}
+
+#locations {
+	background-color: white;
+	color: #001123;
 }
 
 .locations, .locations h3 {
@@ -121,17 +133,46 @@ main h1, main h2 {
 	}
 }
 
-@media (max-width: 800px) {
+@media (max-width: 710px) {
 	iframe {
-		width: 430px;
+		width: 320px;
+	}
+	.navbar {
+		font-size: 1em;
+	}
+	.jumbotron h1, .jumbotron h2 {
+		font-size: 2em;
+	}
+	.jumbotron p{
+	font-size: 1.5em;
+	}
+	.title{
+		padding: 1em;
+		font-size: 2em;
+		text-align: center;
+		font-weight: 700;
+		text-transform: uppercase;
+		letter-spacing: 0.12em;
+	}
+	.text {
+		font-size: 1em;
+		padding-bottom: 2em;
+	}
+	.jumbotron h1, .jumbotron p, .jumbotron a, .jumbotron hr {
+		display: none;
+	}
+	
+	.fuckmobiles {
+		display: block;
 	}
 }
 
 /* Footer */
 
 footer {
-	margin-top: -1em;
 	padding-top: 3em;
+	background-color: white;
+	color: #001123;
 }
 
 .footer-content {
@@ -147,7 +188,7 @@ footer {
 }
 
 .footer-nav a {
-	color: black;
+	color: #001123;
 	text-decoration: underline;
 }
 
