--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* CSS Document */
 
-@import url('https://fonts.googleapis.com/css2?family=Gupter:wght@400;500;700&family=Lancelot&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gupter:wght@400;500;700&family=Lancelot&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shadows+Into+Light&family=Tangerine:wght@400;700&display=swap');
 
 body {
 	background-color: #2e2e2e;
@@ -62,6 +62,16 @@ main h1, main h2 {
 	background-size: cover;
 }
 
+#hero4{
+	background: url("../images/Susan and Kevin Standing BNW 2.png") no-repeat center center;
+	background-size: cover;
+}
+
+#hero5{
+	background: url("../images/Susan and Kevin Hand in Hand BNW.png") no-repeat center center;
+	background-size: cover;
+}
+
 .jumbotron {
 	color: white;
 	text-shadow: 0.1em 0.2em 0.3em rgba(0, 0, 0, 0.8);
@@ -92,7 +102,7 @@ main h1, main h2 {
 }
 
 .title{
-	padding: 1em;
+	padding: 3em 0 2em 0;
 	font-size: 3em;
 	text-align: center;
 	font-weight: 700;
@@ -112,9 +122,30 @@ main h1, main h2 {
 	display: none;
 }
 
-#locations {
+#locations, #menu {
 	background-color: white;
 	color: #001123;
+}
+
+#menu h2, #menu h3 {
+	font-family: "Tangerine", cursive;
+	text-transform: none;
+	font-weight: 700;
+}
+
+#menu h2 {
+	font-size: 4em;
+	padding-top: 1em;
+}
+
+#menu h3 {
+	font-size: 3em;
+}
+
+#menu {
+	font-family: "Shadows Into Light", cursive;
+	font-size: 1.5em;
+	text-align: center;
 }
 
 .locations, .locations h3 {
@@ -126,6 +157,87 @@ main h1, main h2 {
 	padding-bottom: 2em;
 	padding-left: 10em;
 }
+
+#accordion1 {
+	font-size: 1.1em;
+}
+
+#accordion1 a {
+	color: white;
+	font-family: "Merriweather", serif;
+}
+
+#accordion1 h5 {
+	font-weight: 700;
+	font-size: 1.2em;
+}
+
+.card {
+	border-color: #3e3e3e;
+}
+
+.card-header {
+	background-color: #3e3e3e;
+}
+
+.card-body {
+	background-color: #2e2e2e;
+}
+
+.qst {
+	font-style: italic;
+	font-weight: 700;
+	font-size: 1.1em;
+}
+
+.ans {
+	padding-left: 0.75em;
+}
+
+/* Footer */
+
+footer {
+	padding-top: 3em;
+	background-color: white;
+	color: #001123;
+}
+
+.footer-content {
+	width: 70%;
+	margin: 0 auto;
+	padding-bottom: 1em;
+	font-weight: 900;
+}
+
+.footer-nav {
+	list-style-type: none;
+	padding: 0;
+}
+
+.footer-nav a {
+	color: #001123;
+	text-decoration: underline;
+}
+
+#footer-btn {
+	border-radius: 50px;
+	font-size: 1.75em;
+	padding: 0.25em 0.75em;
+}
+
+#watermark {
+	font-family: "Roboto", sans-serif;
+	font-weight: 400;
+	font-size: 0.75em;
+}
+
+.footerlogo {
+	font-weight: 700;
+	font-family: "Merriweather", serif;
+	font-size: 3em;
+}
+
+/* Responsiveness */
 
 @media (max-width: 1280px){
 	.text {
@@ -165,41 +277,9 @@ main h1, main h2 {
 	.fuckmobiles {
 		display: block;
 	}
-}
-
-/* Footer */
-
-footer {
-	padding-top: 3em;
-	background-color: white;
-	color: #001123;
-}
-
-.footer-content {
-	width: 70%;
-	margin: 0 auto;
-	padding-bottom: 1em;
-	font-weight: 900;
-}
-
-.footer-nav {
-	list-style-type: none;
-	padding: 0;
-}
-
-.footer-nav a {
-	color: #001123;
-	text-decoration: underline;
-}
-
-#footer-btn {
-	border-radius: 50px;
-	font-size: 1.75em;
-	padding: 0.25em 0.75em;
-}
-
-#watermark {
-	font-family: "Roboto", sans-serif;
-	font-weight: 400;
-	font-size: 0.75em;
+	
+	.footerlogo {
+		font-size: 2em;
+		margin-bottom: 1em;
+	}
 }
